--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ input {
 }
 
 button {
+  width: 100%;
   border: none;
   outline: none;
   padding: 16px 50px;
@@ -123,12 +124,12 @@ ul li span:hover {
   }
 
   button {
-    padding: 20px 60px;
+    padding: 15px 60px;
     font-size: 18px;
   }
 
   input {
-    padding: 12px;
+    padding: 22px;
   }
 
   ul li {
@@ -144,12 +145,12 @@ ul li span:hover {
   }
 
   button {
-    padding: 16px 50px;
+    padding: 10px 50px;
     font-size: 16px;
   }
 
   input {
-    padding: 10px;
+    padding: 20px;
   }
 
   ul li {
